[metadata]
name = restalchemy
version = 0.1.0
summary = REST HTTP Abstraction Library
description-file =
    README.rst
author = Eugene Frolov
author-email = eugene@frolov.net.ru
home-page = http://synapse.net.ru/
classifier =
    Environment :: neuronclient
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
